# TimerRunnner

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  krunner_timer.notifyrc  main.cpp  timer.cpp  timer.h  timerrunner.cpp  timerrunner.desktop  timerrunner.h  utilities.h
src/core/: CMakeLists.txt  timer.cpp  timer.h  utilities.cpp  utilities.h
